// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeSpec should render Badge 1`] = `
<div
  className="tc-badge tc-badge-readonly"
  style={undefined}
>
  <button
    className="tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-label"
    >
      extend
    </span>
  </button>
</div>
`;

exports[`BadgeSpec should render Badge with category and delete icon 1`] = `
<div
  className="tc-badge"
  style={undefined}
>
  <button
    className="tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-category"
    >
      Computer
    </span>
    <span
      className="tc-badge-label"
    >
      Table
    </span>
  </button>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`BadgeSpec should render Badge with delete icon 1`] = `
<div
  className="tc-badge"
  style={undefined}
>
  <button
    className="tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-label"
    >
      Directives
    </span>
  </button>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`BadgeSpec should render disabled Badge with delete icon 1`] = `
<div
  className="tc-badge tc-badge-disabled"
  style={undefined}
>
  <button
    className="tc-badge-button"
    disabled={true}
    onClick={undefined}
  >
    <span
      className="tc-badge-label"
    >
      Home Loan Account
    </span>
  </button>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={true}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`BadgeSpec should render selected Badge with delete icon 1`] = `
<div
  className="tc-badge tc-badge-selected"
  style={undefined}
>
  <button
    className="tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-label"
    >
      application
    </span>
  </button>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;
